--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,12 @@ body{
     text-align: justify;
     margin-bottom: 25px;
 }
+.cTextList li{
+    list-style-image: url('../image/li.png');
+}
+.cTextList li:last-child{
+    font-family: 'FShabnamB';
+}
 .ctButton{
     display: inline-block;
     font: 20px 'FShabnamB';
