--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -579,6 +579,38 @@ body{
         font-size: 17px;
     }
 }
+#footerSocial{
+    float: left;
+}
+.footerSocial a{
+    text-decoration: none;
+}
+#footerSocial{
+    margin-top: -28px;
+}
+.fsIcon{
+    width: 32px;
+    height: 32px;
+    background: url("../image/social.png") no-repeat;
+    list-style: none;
+    float: left;
+    margin-right: 7px;
+}
+.fsTelegram{
+    background-position-x: 0;
+}
+.fsInstagram{
+    background-position: -36px;
+}
+.fsGithub{
+    background-position: -108px;
+}
+.fsCodepen{
+    background-position: -72px;
+}
+.fsDonate{
+    background-position: -145px;
+}
 
 /*
     GoTop Button
