--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,7 +283,10 @@ body{
     padding: 0 14px 2px 14px;
     margin-top: 11px;
 }
-.portfolioTitle i{float: right;}
+.portfolioTitle i{
+    float: right;
+    margin-top: -1px;
+}
 .portfolioTitle span{margin-right: 7px;}
 .portfolioTags{
     direction: ltr;
