Add email address ✉️

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -626,8 +626,11 @@ body{
 .fsCodepen{
     background-position: -72px;
 }
-.fsDonate{
+.fsEmail{
     background-position: -145px;
+}
+.fsDonate{
+    background-position: -181px;
 }
 
 /*
